tests/models/struct/unnamed/usize/fail/min_length.rs
use dade::model;
#[model]
struct TestModel (
   #[field(min_length = 2)]
    usize
);
fn main() {}
